--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nestjs/mapped-types": "*",
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.1"
   }
 }
